    on local listening sockets for UDP multicast sockets (ZMQ_RADIO).
  See doc/zmq_setsockopt.txt and doc/zmq_getsockopt.txt for details.

* New perf tool, perf/benchmark_radix_tree, to measure the performance of the
  different internal implementations of the trie algorithm used to track
  subscriptions. Requires a compiler that supports C++11.

* Many, many coding style, duplication and static analysis improvements.

* Many, many improvements to the CMake build system, especially on Windows.

* Many, many improvements to unit tests.

* Fixed #3036 - Compilation error when -pedantic is used.

* Fixed #3028 - Failure when zmq_poller_destroy is called after zmq_ctx_term.

* Fixed #2989 - CMake: Linker PDB install rule does not work when Visual Studio
                generators are used.

* Fixed #3045 - configure.ac: search for dladdr only when using libunwind.

* Fixed #3060 - REQ sockets terminate TCP connection after first heartbeat if
                ZMQ_HEARTBEAT_IVL is set.

* Fixed #2212 - UDP: need ability to specify bind address separately from
                multicast address for multi-homed hosts.

* Fixed #2891 - UDP: address name resolution is limited to dotted IPv4 rather
                than being capable of IPv4, IPv6, and hostname lookup.

* Fixed #3085 - autoconf/CMake getrandom test does not check if it's working but
                only for its presence.

* Fixed #3090 - compilation broken with Solaris Studio.

* Fixed #3094 - UDP: pass interface via IP[V6]_MULTICAST_IF if provided.

* Fixed #3061 - implement ZMTP 3.1 ping/pong context sending/receiving.

* Fixed #2188 - Added documentation for new zmq_poller API.

* Fixed #3088 - zmq_poller_add/zmq_poller_modify should reject invalid events
                arguments.

* Fixed #3042 - Fixed compilation on ARM with ZMQ_ATOMIC_PTR_MUTEX.

* Fixed #3107 - test_immediate_3/test_reconnect_inproc do not terminate with
                POLL as the I/O thread poller under Windows.
